--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@astrojs/react": "^1.1.4",
     "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^2.0.1",
     "astro": "^1.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@s-ui/mono": "^2.31.0",
